# DigitalSignature

./: .gitignore  LICENSE  PropozycjaREADME.md  README.md  manage.py  run_app.py
backend/: .gitignore  README.md  main.py  requirements.txt
backend/app/: auth.py  run.py
backend/app/computing/: CMakeLists.txt  README.md  build_pyd.py  package-lock.json  setup.py
backend/app/computing/include/digisign/: BigInt.h  ecdsa.h  elgamal.h  format.h  mod_arith.h  prime.h  pss.h  rng.h  rsa.h  sha256.h  sha3.h
backend/app/computing/src/: BigInt.cpp  ecdsa.cpp  elgamal.cpp  format.cpp  libexample.cpp  mod_arith.cpp  prime.cpp  pss.cpp  pybind.cpp  rng.cpp  rsa.cpp  sha256.cpp  sha3.cpp
backend/app/core/: encryption.py
backend/app/routers/: bmi_endp.py  crypto_endp.py  external_server_endp.py  spa_endp.py
backend/app/schemas/: bmi_schemas.py  crypto_shemas.py  external_server_schemas.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  App.tsx  EncryptPage.jsx  EncryptPage.tsx  Layout.jsx  index.css  main.tsx
frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs
frontend/src/components/: BmiButton.tsx  BmiHeader.tsx  BmiInputs.tsx  BmiResult.tsx  EncryptAndSignBtn.tsx  EncryptPage.tsx  TempResultSection.tsx  VerifyPage.tsx  VerifySignatureBtn.tsx
frontend/src/pages/: AuthPage.tsx  EncryptPage.tsx  Layout.tsx  VerifyPage.tsx
frontend/src/services/: rsaAPI.tsx  serverAPI.tsx
